--- a/chatbot/src/main/resources/application.properties
+++ b/chatbot/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=8080
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/chatbot
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/chatbot?createDatabaseIfNotExist=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+# uncomment above two lines on clone and then comment out next two lines.
+spring.datasource.username=nikhil
+spring.datasource.password=toor
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=update
-
-
+#spring.jpa.hibernate.ddl-auto=create
